--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@
     justify-content: space-between;
     align-items: center;
     margin: 0 200px;
+    padding: 50px 0px;
 
     
 }
@@ -56,17 +57,39 @@
     justify-content: space-around;
     height: 100vh;
     align-items: center;
+    margin:30px 30px 200px 200px;
 }
 .header{
-    background:#FFF8F3;;
+    background:#FFF8F3;
+    background-image: url("images/header_bg.png"),url(images/developer.png);
+    background-repeat: no-repeat;
+    background-position: bottom right, top left ;
 }
 .container-left{
 
 }
 .common-h3{
+    color:  #474747;
+    font-size: 45px;
+    font-weight: 600;
+    line-height: normal; 
 
 }
+.container-left h1{
+    color:#181818;
+    font-size: 85px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal; 
+}
 .common-p{
+    color: var(--dark-03, #757575);
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px;
+    padding-bottom: 20px;; 
+   
 
 }
 .container-right{
@@ -75,5 +98,68 @@
 }
 .hardy{
     width:500px; 
+    margin-top:40px;
+
 
 }
+.button{
+    display: flex;
+    gap: 30px;
+}
+.btns{
+    background-color: transparent;
+    border-radius: 5px;
+    border: 1px solid #FD6E0A;
+    color: #FD6E0A;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 700;
+    padding: 10px 20px;
+ }
+ .bts{
+    color:#FFF;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 700;
+    line-height: normal;
+    padding: 10px 20px; 
+ }
+ .about-container{
+    width: 1140px;
+    border-radius: 10px;
+    background: #FFF8F3; 
+    margin: 0 auto;
+ }
+ .title{
+    padding-top: 130px;
+    color: #181818;
+    text-align: center;
+    font-size: 35px;
+    font-weight: 700;
+ }
+ .para{
+    color: #757575;
+    text-align: center;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 30px; 
+    padding: 30px 155px;
+ }
+ table{
+    margin: 0 auto;
+    border-collapse: collapse;
+ }
+ .th{
+    color: #757575;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 30px; 
+
+ }
+ .td{
+    color: #757575;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 30px; 
+ }
