--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@
     justify-content: space-around;
     height: 100vh;
     align-items: center;
-    margin:30px 30px 200px 200px;
+    padding:30px 30px 0px 150px;
 }
 .header{
     background:#FFF8F3;
@@ -83,25 +83,23 @@
     line-height: normal; 
 }
 .common-p{
-    color: var(--dark-03, #757575);
+    color:#757575;
     font-size: 18px;
     font-style: normal;
     font-weight: 400;
     line-height: 30px;
-    padding-bottom: 20px;; 
+    padding-bottom: 20px;
    
 
 }
 .container-right{
-
-
 }
-.hardy{
-    width:500px; 
-    margin-top:40px;
-
-
+.container-right img{
+    width: 500px;
+    margin-top: 10px;
 }
+
+
 .button{
     display: flex;
     gap: 30px;
@@ -128,7 +126,8 @@
     width: 1140px;
     border-radius: 10px;
     background: #FFF8F3; 
-    margin: 0 auto;
+    margin: 130px auto 0px;
+    padding-bottom: 130px;
  }
  .title{
     padding-top: 130px;
@@ -145,21 +144,73 @@
     line-height: 30px; 
     padding: 30px 155px;
  }
- table{
-    margin: 0 auto;
-    border-collapse: collapse;
- }
- .th{
-    color: #757575;
-    font-size: 20px;
-    font-weight: 400;
-    line-height: 30px; 
-
- }
- .td{
-    color: #757575;
+.about-info-container{
+    
+    display: flex;
+    justify-content: center;
+    /* justify-content: space-around; */
+    gap: 50px;
+}
+.about-info{
     text-align: center;
+    color: #757575;
     font-size: 20px;
     font-weight: 400;
     line-height: 30px; 
- }
+}
+.skill-container{
+    width: 1140px;
+    display: flex;
+    justify-content: space-between;
+    margin: 0 auto;
+
+}
+.skill-main{
+    padding: 30px;
+    border-radius: 5px;
+    background: #FFF;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+    width: 23%;
+}
+.skill-title{
+    color:#181818;
+    font-size: 20px;
+    font-weight: 700;
+    padding: 20px 0px;
+
+}
+.skill-description{
+    color:  #757575;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 28px;
+}
+.my-self{
+    width: 1140px;
+    display: flex;
+    justify-content: space-between;
+    margin:0px auto;
+
+}
+.my-sellf-left{
+
+}
+.my-self-h4{
+
+}
+.my-self-h5{
+
+}
+.my-self-h6{
+
+}
+.my-self-descript{
+
+}
+.hr{
+    flex-direction: row;
+}
+.my-sellf-right{
+
+}
+
