--- a/style.css
+++ b/style.css
@@ -193,24 +193,45 @@
 
 }
 .my-sellf-left{
+    width: 48%;
 
 }
 .my-self-h4{
-
+    color: #474747;
+    font-size: 30px;
+    font-weight: 700;
+    padding: 30px 0px;
 }
 .my-self-h5{
+    color:  #474747;
+    font-size: 25px;
+    font-weight: 600;
 
 }
 .my-self-h6{
+    color:  #757575;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 500; 
+    padding: 10px 0px 20px;
 
 }
 .my-self-descript{
+    color: var(--dark-03, #757575);
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 28px;
+    padding-bottom: 30px;
 
 }
-.hr{
-    flex-direction: row;
-}
 .my-sellf-right{
+    width: 48%;
+
+}
+.donwlod-btn{
+    text-align: center;
+    padding: 50px 0px 130px;
+
 
 }
 
