--- a/style.css
+++ b/style.css
@@ -231,7 +231,48 @@
 .donwlod-btn{
     text-align: center;
     padding: 50px 0px 130px;
-
+}
+.footer-container{
+    background: #FFF8F3; 
+    padding:130px 0px ;
+}
+.footer-main{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 1140px;
+    margin: 0px auto;
+}
+.footer-main-left{
+    width: 48%;
+}
+.footer-main-left-h3{
+    color: #181818;
+    font-size: 35px;
+    font-weight: 700;
+    padding: 25px 0px;
 
 }
-
+.footer-main-left p{
+    color:  #474747;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 28px;
+    width: 75%; 
+    padding-bottom: 30px;
+}
+.fd-img{
+    display: flex;
+    gap: 24px;
+}
+.footer-main-right{
+    width: 48%;
+}
+form, input[type="text"], input[type="email"], textarea{
+    display: block;
+    margin-bottom: 25px;
+    padding: 15px 25px;
+    border-radius: 5px; 
+    border: 0;
+    width: 100%;
+}
